2006-02-02  Christian Persch  <chpe@cvs.gnome.org>

	* m4/gecko.m4:

	Add GECKO_CHECK_HEADERS, wrapping AC_CHECK_HEADERS.

	* configure.ac:

	Simplify some header checks with GECKO_CHECK_HEADERS.
	Check for nsINonBlockingAlertService.h.

	* embed/mozilla/EphyPromptService.cpp:
	* embed/mozilla/EphyPromptService.h:
	* embed/mozilla/MozRegisterComponents.cpp:

	Implement nsINonBlockingAlertService.

2006-02-02  Christian Persch  <chpe@cvs.gnome.org>

	* embed/downloader-view.c:
	* embed/downloader-view.h:
	* embed/ephy-embed-shell.c:
	(ephy_embed_shell_get_downloader_view_nocreate):
	* embed/ephy-embed-shell.h:
	* lib/ephy-gui.c: (ephy_gui_message_dialog_get_content_box):
	* lib/ephy-gui.h:
	* src/ephy-session.c:
	(confirm_shutdown_dialog_update_timeout_label),
	(confirm_shutdown_dialog_tick_cb),
	(confirm_shutdown_dialog_response_cb),
	(confirm_shutdown_dialog_accept_cb),
	(confirm_shutdown_dialog_weak_ref_cb), (confirm_shutdown_cb),
	(save_yourself_cb):

	On session logout, check if there are downloads pending (since
	they're not resumable, bug #128048). #if 0'd for now.

2006-02-02  Jean-François Rameau  <jframeau@cvs.gnome.org>
	
	* lib/egg/egg-editable-toolbar.c: (toolbar_visibility_refresh):
	* src/bookmarks/ephy-topics-entry.c: (update_database):

	Fix some memory leaks.

2006-02-02  Peter Harvey  <peter.a.harvey@gmail.com>

	* src/bookmarks/ephy-bookmark-action.c
	
	Allow bookmarks on the toolbar to be dragged.

	* src/bookmarks/ephy-topic-action.c
	
	Remove redundant function call.
	
2006-02-02  Christian Persch  <chpe@cvs.gnome.org>

	* src/ephy-session.c: (save_yourself_cb), (die_cb),
	(session_command_free), (session_command_find),
	(resume_dialog_response_cb), (resume_dialog_weak_ref_cb),
	(session_command_autoresume),
	(session_command_open_bookmarks_editor),
	(session_command_open_uris), (session_command_dispatch),
	(session_command_queue_next), (session_command_queue_clear),
	(ephy_session_init), (ephy_session_dispose),