@@ -2,6 +2,12 @@
 
 	* m4/gecko.m4:
 
+	Add GECKO_XPIDL to check for xpidl compiler and include directory.
+
+2006-02-02  Christian Persch  <chpe@cvs.gnome.org>
+
+	* m4/gecko.m4:
+
 	Add GECKO_CHECK_HEADERS, wrapping AC_CHECK_HEADERS.
 
 	* configure.ac:
